# sort-all

./: .editorconfig  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  Makefile  README.md  README.rst  requirements.txt  setup.cfg  sort_all.py
.github/workflows/: ci.yml
tests/: test_basic.py
