[metadata]
name = sort_all
version = 1.1.0
description = Automatically Sort __all__ records alphabetically
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/aio-libs/sort-all
author = Andrew Svetlov
author_email = andrew.svetlov@gmail.com
license = Apache-2.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
py_modules = sort_all
install_requires =
    tokenize-rt>=3.0.1
python_requires = >=3.8

[options.entry_points]
console_scripts =
    sort-all = sort_all:main

[flake8]
exclude = .git,.env,__pycache__,.eggs
max-line-length = 88
ignore = N801,N802,N803,E252,W503,E133,E203,F541

[isort]
profile = black

[tool:pytest]
addopts = --cov=sort_all
testpaths = tests/
junit_suite_name = sort_all_test_suite
junit_family = xunit2

[mypy]
check_untyped_defs = True
disallow_any_generics = True
disallow_untyped_defs = True
follow_imports = silent
strict_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_unused_configs = True
disallow_incomplete_defs = True
no_implicit_optional = True

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
